# esp32-wifi-bridge

./: CMakeLists.txt  README.md
main/: CMakeLists.txt  Kconfig.projbuild  eth2ap_main.c  ethernet_iface.c  main.c  manual_config.c  sta2eth_main.c  wired_iface.h
